// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Component Borderless renders correctly 1`] = `
<DocumentFragment>
  <div
    class="mia-platform-select mia-platform-select-borderless input fullWidth select mia-platform-select-single mia-platform-select-show-arrow"
  >
    <div
      class="mia-platform-select-selector"
    >
      <span
        class="mia-platform-select-selection-search"
      >
        <input
          aria-autocomplete="list"
          aria-controls="rc_select_TEST_OR_SSR_list"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="rc_select_TEST_OR_SSR_list"
          autocomplete="off"
          class="mia-platform-select-selection-search-input"
          id="rc_select_TEST_OR_SSR"
          readonly=""
          role="combobox"
          style="opacity: 0;"
          type="search"
          unselectable="on"
          value=""
        />
      </span>
      <span
        class="mia-platform-select-selection-placeholder"
      />
    </div>
    <span
      aria-hidden="true"
      class="mia-platform-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <svg
        color="currentColor"
        fill="currentColor"
        height="16"
        role="img"
        stroke="currentColor"
        stroke-width="0"
        style="color: currentColor;"
        viewBox="0 0 256 256"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Select Component Disabled renders correctly 1`] = `
<DocumentFragment>
  <div
    class="mia-platform-select mia-platform-select-outlined input fullWidth disabled select disabled mia-platform-select-single mia-platform-select-show-arrow mia-platform-select-disabled"
  >
    <div
      class="mia-platform-select-selector"
    >
      <span
        class="mia-platform-select-selection-search"
      >
        <input
          aria-autocomplete="list"
          aria-controls="rc_select_TEST_OR_SSR_list"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="rc_select_TEST_OR_SSR_list"
          autocomplete="off"
          class="mia-platform-select-selection-search-input"
          disabled=""
          id="rc_select_TEST_OR_SSR"
          readonly=""
          role="combobox"
          style="opacity: 0;"
          type="search"
          unselectable="on"
          value=""
        />
      </span>
      <span
        class="mia-platform-select-selection-placeholder"
      />
    </div>
    <span
      aria-hidden="true"
      class="mia-platform-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <svg
        color="currentColor"
        fill="currentColor"
        height="16"
        role="img"
        stroke="currentColor"
        stroke-width="0"
        style="color: currentColor;"
        viewBox="0 0 256 256"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Select Component Error renders correctly 1`] = `
<DocumentFragment>
  <div
    class="mia-platform-select mia-platform-select-outlined mia-platform-select-status-error input fullWidth select mia-platform-select-single mia-platform-select-show-arrow"
  >
    <div
      class="mia-platform-select-selector"
    >
      <span
        class="mia-platform-select-selection-search"
      >
        <input
          aria-autocomplete="list"
          aria-controls="rc_select_TEST_OR_SSR_list"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="rc_select_TEST_OR_SSR_list"
          autocomplete="off"
          class="mia-platform-select-selection-search-input"
          id="rc_select_TEST_OR_SSR"
          readonly=""
          role="combobox"
          style="opacity: 0;"
          type="search"
          unselectable="on"
          value=""
        />
      </span>
      <span
        class="mia-platform-select-selection-placeholder"
      />
    </div>
    <span
      aria-hidden="true"
      class="mia-platform-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <svg
        color="currentColor"
        fill="currentColor"
        height="16"
        role="img"
        stroke="currentColor"
        stroke-width="0"
        style="color: currentColor;"
        viewBox="0 0 256 256"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Select Component Read only renders correctly 1`] = `
<DocumentFragment>
  <div
    class="mia-platform-select mia-platform-select-outlined input fullWidth readonly select readOnly mia-platform-select-single mia-platform-select-show-arrow"
  >
    <div
      class="mia-platform-select-selector"
    >
      <span
        class="mia-platform-select-selection-search"
      >
        <input
          aria-autocomplete="list"
          aria-controls="rc_select_TEST_OR_SSR_list"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="rc_select_TEST_OR_SSR_list"
          autocomplete="off"
          class="mia-platform-select-selection-search-input"
          id="rc_select_TEST_OR_SSR"
          readonly=""
          role="combobox"
          style="opacity: 0;"
          type="search"
          unselectable="on"
          value=""
        />
      </span>
      <span
        class="mia-platform-select-selection-placeholder"
      />
    </div>
    <span
      aria-hidden="true"
      class="mia-platform-select-arrow"
      style="user-select: none;"
      unselectable="on"
    />
  </div>
</DocumentFragment>
`;

exports[`Select Component renders correctly 1`] = `
<DocumentFragment>
  <div
    class="mia-platform-select mia-platform-select-outlined input fullWidth select mia-platform-select-single mia-platform-select-show-arrow"
  >
    <div
      class="mia-platform-select-selector"
    >
      <span
        class="mia-platform-select-selection-search"
      >
        <input
          aria-autocomplete="list"
          aria-controls="rc_select_TEST_OR_SSR_list"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="rc_select_TEST_OR_SSR_list"
          autocomplete="off"
          class="mia-platform-select-selection-search-input"
          id="rc_select_TEST_OR_SSR"
          readonly=""
          role="combobox"
          style="opacity: 0;"
          type="search"
          unselectable="on"
          value=""
        />
      </span>
      <span
        class="mia-platform-select-selection-placeholder"
      />
    </div>
    <span
      aria-hidden="true"
      class="mia-platform-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <svg
        color="currentColor"
        fill="currentColor"
        height="16"
        role="img"
        stroke="currentColor"
        stroke-width="0"
        style="color: currentColor;"
        viewBox="0 0 256 256"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;
